Optimize video loading for mobile devices

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div class="main">
         <div class="banner">
-            <video autoplay muted loop id="banner">
+            <video preload="metadata" playsinline="metadata" muted loop id="banner">
                 <source src="/dist/image/clouds.mp4" type="video/mp4">
               </video>
             <div class="quote">
