--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     
     <div class="main">
         <div class="banner">
-            <video preload="metadata" playsinline="metadata" muted loop id="banner">
-                <source src="/dist/image/clouds.mp4" type="video/mp4">
-              </video>
+            <video autoplay loop muted playsinline preload="metadata" src="/dist/image/clouds.mp4" id="banner"></video>
             <div class="quote">
                 <p>The Power</p>
                 <p><span>of Genuine Communication</span></p>
