remove video muted

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div class="main">
         <div class="banner">
-            <video autoplay loop muted playsinline preload="metadata" src="/dist/image/clouds.mp4" id="banner"></video>
+            <video autoplay loop playsinline preload="auto" src="/dist/image/clouds.mp4" id="banner"></video>
             <div class="quote">
                 <p>The Power</p>
                 <p><span>of Genuine Communication</span></p>
