--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     
     <div class="main">
         <div class="banner">
-            <video autoplay loop playsinline preload="auto" src="/dist/image/clouds.mp4" id="banner"></video>
+            <video autoplay loop muted playsinline preload="metadata" style="width: 100%; height: 100%; object-fit: cover;" id="banner">
+                <source  src="/dist/image/clouds.mp4" type="video/mp4">
+            </video>
             <div class="quote">
                 <p>The Power</p>
                 <p><span>of Genuine Communication</span></p>
