--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div class="main">
         <div class="banner">
-            <video autoplay loop muted playsinline preload="metadata" style="width: 100%; height: 100%; object-fit: cover;" id="banner">
+            <video autoplay loop muted playsinline preload="metadata" style="width: 100%; height: 100%; object-fit: cover;" id="banner-video">
                 <source  src="/dist/image/clouds.mp4" type="video/mp4">
             </video>
             <div class="quote">
