add address and adjust service content

--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                         <div class="service-item">
                             <img src="/dist/image/ic-medical.png">
                             <h3>Medical Writing</h3>
-                            <p>Involves communicating complex medical information in a clear and understandable way.</p>
+                            <p>Our editorial team consists of pharmacists and physicians, enabling us to quickly grasp and integrate information across various medical fields.</p>
                         </div>
                    </div>
                    <div class="service-wrap" data-aos="fade-up" data-aos-duration="1000">
                         <div class="service-item">
                             <img src="/dist/image/ic-event.png">
                             <h3>Event Management</h3>
-                            <p>Event management is the process of achieving specific objectives through planned events.</p>
+                            <p>Our extensive experience in event management ensures seamless execution, guaranteeing memorable and successful events tailored to our clients' needs.</p>
                         </div>
                     </div>
                     <div class="service-wrap" data-aos="fade-up" data-aos-duration="2000">
                         <div class="service-item">
                             <img src="/dist/image/ic-digital.png">
                             <h3>Digital Solution</h3>
-                            <p>A digital solution is an innovative use of technology to improve efficiency and productivity.</p>
+                            <p>We provide a range of innovative digital solutions optimized for diverse devices and delivery purposes to address your specific requirements.</p>
                         </div>
                     </div>
                </div>
@@ -134,8 +134,11 @@
                     <img src="/dist/image/img-contact.png">
                     <div class="contact-item">
                         <p>To initiate a consultation regarding our services, please contact us by email:</p>
-                        <div class="contact-email">
+                        <div class="contact-info contact-email">
                             <a href="mailto:yunsharemedi@gmail.com">yunsharemedi@gmail.com</a>
+                        </div>
+                        <div class="contact-info contact-address">
+                            <p>10F., No. 201, Sec. 3, Nanjing E. Rd., Zhongshan Dist., Taipei City 104506 , Taiwan (R.O.C.)</p>
                         </div>
                     </div>
                 </div>
