--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yun</title>
+    <title>Yuns Medicom</title>
     <link rel="stylesheet" href="/dist/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <!-- 瀏覽器提前加載 -->
     <link rel="preload" as="image" href="/dist/image/banner.png">
     <link rel="preload" as="mp4" href="/dist/image/clouds.mp4">
     <link rel="preload" as="image" href="/dist/image/img-logo.png">
     <link rel="preload" as="image" href="/dist/image/img-logo-scrolled.png">
+    
 </head>
 <body>
     <div class="header">
