(SEO)Optimize web page description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuns Medicom</title>
+    <title>蘊思醫學編譯 Yuns Medicom</title>
+    <meta name="description" content="蘊思醫學編譯是專業醫學編輯和學術資訊整合服務的領先提供者。Yuns medicom LTD is a leading provider of specialized medical editing and academic information integration services. ">
+    <meta name="keywords" content="蘊思, 醫學編譯, Yuns Medicom">
     <link rel="stylesheet" href="/dist/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -20,7 +22,7 @@
     <div class="header">
         <div class="container">
             <a href="#">
-                <h1 class="logo">Yuns Medicom</h1>
+                <h1 class="logo">蘊思醫學編譯</h1>
             </a>
             <nav>
                 <ul class="main-nav">
