--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="title" data-aos="fade-down"
                 data-aos-easing="linear"
                 data-aos-duration="1500">
-                    <h2>ABOOUT US</h2>
+                    <h2>ABOUT US</h2>
                     <span>ABOUT US</span>
                 </div>
                 <p>
@@ -157,7 +157,7 @@
     </div>
 
     <div class="footer">
-        <p>Copyright © 2024 Yuns Medicom All rights reserved.</p>
+        <p>Copyright © 2024 Yuns Medicom LTD</p>
     </div>
     <script>
         //AOS animation plugin
