--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <!-- 瀏覽器提前加載 -->
     <link rel="preload" as="image" href="/dist/image/banner.png">
-    <link rel="preload" as="mp4" href="/dist/image/clouds.mp4">
+    <link rel="preload" as="video" href="/dist/image/clouds.mp4">
     <link rel="preload" as="image" href="/dist/image/img-logo.png">
-    <link rel="preload" as="image" href="/dist/image/img-logo-scrolled.png">
     
 </head>
 <body>
