--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="128x128" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon.png">
     <!-- 瀏覽器提前加載 -->
     <link rel="preload" as="image" href="/dist/image/banner.png">
     <link rel="preload" as="video" href="/dist/image/clouds.mp4">
